docs/storybook/.storybook/storybook.css
:root,
[data-color-mode='dark'][data-dark-theme='dark'],
[data-color-mode='auto'][data-light-theme='dark'] {
  --docs-demo-bgColor-solid: #e2c5ff;
  --docs-demo-bgColor-muted: #a371f766;
  --docs-demo-bgColor-emphasis: #8957e5;
  --docs-demo-borderColor-muted: #a371f766;
  --docs-demo-borderColor-emphasis: #8957e5;
  --docs-demo-fgColor: #a371f7;
}

:root,
[data-color-mode='light'][data-dark-theme='light'],
[data-color-mode='auto'][data-light-theme='light'] {
  --docs-demo-bgColor-solid: #fbefff;
  --docs-demo-bgColor-muted: #fbefff;
  --docs-demo-bgColor-emphasis: #8250df;
  --docs-demo-borderColor-muted: #c297ff66;
  --docs-demo-borderColor-emphasis: #8250df;
  --docs-demo-fgColor: #8250df;
}

.story-wrap {
  font-family: var(--fontStack-system);
  color: var(--fgColor-default);
}

#storybook-preview-wrapper {
  background-color: var(--bgColor-default) !important;
  width: 100% !important;
  height: 100% !important;
}

body {
  background-color: var(--bgColor-default) !important;
}

.theme-wrap-grid {
  display: grid;
  grid-template-columns: repeat(4, minmax(var(--breakpoint-xsmall, 20rem), auto));
  grid-gap: 1px;
  height: 100vh;
}

.story-wrap-grid {
  outline: 1px solid #d4d4d8;
  padding-bottom: 40px;
  position: relative;
}

.light-dark-split {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
}

.light-dark-split .story-wrap {
  padding: 1rem;
}

#storybook-root:has(.light-dark-split) {
  padding: 0 !important;
}

@media (max-width: calc(20rem * 4)) {
  .theme-wrap-grid {
    grid-template-columns: repeat(3, minmax(var(--breakpoint-xsmall, 20rem), auto));
  }
}

@media (max-width: calc(20rem * 3)) {
  .theme-wrap-grid {
    grid-template-columns: repeat(2, minmax(var(--breakpoint-xsmall, 20rem), auto));
  }
}

@media (max-width: calc(20rem * 2)) {
  .theme-wrap-grid {
    display: block;
  }
}

.theme-name {
  position: absolute;
  bottom: 0;
  right: 0;
  background-color: var(--bgColor-muted);
  padding: var(--base-size-4) var(--base-size-8);
  font: var(--text-caption-shorthand);
  margin: 0;
}

.SwatchDecorator {
  display: grid;
  gap: 1rem;
  /* grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr)); */
  grid-template-columns: repeat(auto-fill, minmax(min(100%, 300px), 1fr));
  grid-template-rows: min-content;
}

code {
  padding: 0.2em 0.4em;
  font-family: var(--fontStack-monospace);
  font-size: var(--text-codeInline-size);
  background-color: var(--bgColor-muted);
  border-radius: var(--borderRadius-small);
  font-weight: var(--base-text-weight-normal);
}

.TableCell {
  display: inline-flex;
  align-items: center;
}

.story-wrap {
  --demo-highlight: linear-gradient(
    45deg,
    var(--docs-demo-bgColor-emphasis) 12.5%,
    var(--docs-demo-bgColor-muted) 12.5%,
    var(--docs-demo-bgColor-muted) 50%,
    var(--docs-demo-bgColor-emphasis) 50%,
    var(--docs-demo-bgColor-emphasis) 62.5%,
    var(--docs-demo-bgColor-muted) 62.5%,
    var(--docs-demo-bgColor-muted) 100%
  );
  --demo-highlight-background-size: 5.66px 5.66px;
}

/* doc style overrides */

.body {
  font-family: var(--fontStack-system) !important;
  line-height: 1.5;
  color: var(--fgColor-default) !important;
  background-color: var(--bgColor-default) !important;
}

.sbdocs {
  font: var(--text-body-shorthand-large);
  color: var(--fgColor-default) !important;
}

.sbdocs p {
  font: var(--text-body-shorthand-large);
}

.sbdocs h1 {
  font: var(--text-title-shorthand-large);
}

.sbdocs h2 {
  font: var(--text-title-shorthand-medium);
}

.sbdocs h3 {
  font: var(--text-title-shorthand-small);
}

.sbdocs a {
  color: var(--fgColor-link);
  text-underline-offset: 25%;
  text-decoration: underline;
}

.sbdocs code {
  font: var(--text-codeBlock-shorthand);
  background-color: var(--bgColor-muted) !important;
  border-radius: var(--borderRadius-small) !important;
  border: unset;
  color: var(--fgColor-default) !important;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  word-wrap: normal;
  border: 0;
}

p {
  margin: 0 !important;
}

